--- a/package.json
+++ b/package.json
@@ -8,50 +8,49 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.1",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
     "@icons-pack/react-simple-icons": "^3.8.0",
     "@popperjs/core": "^2.4.4",
     "@tailwindcss/ui": "^0.6.2",
     "gatsby-image": "^2.4.19",
-    "gatsby-plugin-emotion": "^4.3.11",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-netlify": "^2.3.15",
     "gatsby-plugin-offline": "^3.2.28",
+    "gatsby-plugin-postcss": "^2.3.12",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-robots-txt": "^1.5.2",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-sitemap": "^2.4.13",
     "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-plugin-styled-components": "^3.3.11",
     "gatsby-plugin-typescript": "^2.4.20",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-contentful": "^2.3.46",
     "gatsby-transformer-remark": "^2.8.35",
     "gatsby-transformer-sharp": "^2.5.15",
     "intersection-observer": "^0.11.0",
-    "lodash": "^4.17.19",
     "lottie-web": "^5.7.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-popper": "^2.2.3",
     "react-scrollspy": "^3.4.3",
-    "react-transition-group": "^4.4.1",
     "react-use": "^15.3.4",
     "sharp": "^0.26.1",
+    "styled-components": "^5.2.0",
     "tailwindcss": "^1.8.10",
-    "twin.macro": "^1.9.0",
     "typeface-inter": "^3.15.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^3.0.0",
     "@testing-library/cypress": "^7.0.0",
     "@types/cypress-axe": "^0.8.0",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.0.0",
     "@types/react-scrollspy": "^3.3.3",
+    "@types/styled-components": "^5.1.3",
     "autoprefixer": "^10.0.0",
     "axe-core": "^4.0.2",
     "babel-eslint": "^10.1.0",
@@ -61,11 +60,12 @@
     "contentful-import": "^7.9.9",
     "cypress": "^5.2.0",
     "cypress-axe": "^0.8.1",
-    "eslint": "^7.9.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "4.0.0",
     "gatsby": "^2.24.63",
     "gh-pages": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
@@ -76,6 +76,7 @@
     "react-test-renderer": "^16.13.1",
     "rimraf": "^3.0.2",
     "start-server-and-test": "^1.11.4",
+    "twin.macro": "^1.9.0",
     "typescript": "^4.0.3",
     "yargs-parser": "^20.2.0"
   },
