--- a/package.json
+++ b/package.json
@@ -7,77 +7,71 @@
     "url": "https://github.com/contentful-userland/gatsby-contentful-starter/issues"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^14.1.1",
-    "@icons-pack/react-simple-icons": "^3.8.0",
-    "@popperjs/core": "^2.5.3",
-    "@tailwindcss/ui": "^0.6.2",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@popperjs/core": "^2.11.5",
+    "clsx": "^1.1.1",
+    "gatsby": "^4.16.0",
+    "gatsby-plugin-graphql-codegen": "^3.1.1",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^2.4.32",
-    "gatsby-plugin-netlify": "^2.3.16",
-    "gatsby-plugin-offline": "^3.2.29",
-    "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sharp": "^2.6.37",
-    "gatsby-plugin-sitemap": "^2.4.14",
+    "gatsby-plugin-manifest": "^4.16.0",
+    "gatsby-plugin-netlify": "^5.0.0",
+    "gatsby-plugin-offline": "^5.16.0",
+    "gatsby-plugin-postcss": "^5.16.0",
+    "gatsby-plugin-react-helmet": "^5.16.0",
+    "gatsby-plugin-robots-txt": "^1.7.1",
+    "gatsby-plugin-sharp": "^4.16.1",
+    "gatsby-plugin-sitemap": "^5.16.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-plugin-typescript": "^2.4.21",
-    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-contentful": "^2.3.48",
-    "gatsby-transformer-remark": "^2.8.36",
-    "gatsby-transformer-sharp": "^2.5.16",
-    "intersection-observer": "^0.11.0",
-    "lottie-web": "^5.7.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "gatsby-plugin-styled-components": "^5.16.0",
+    "gatsby-plugin-typescript": "^4.16.0",
+    "gatsby-source-contentful": "^7.14.0",
+    "gatsby-transformer-sharp": "^4.16.0",
+    "graphql": "^15.8.0",
+    "lottie-web": "5.9.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "react-popper": "^2.2.3",
-    "react-scrollspy": "^3.4.3",
-    "react-use": "^15.3.4",
-    "sharp": "^0.26.1",
-    "styled-components": "^5.2.0",
-    "tailwindcss": "^1.8.10",
-    "typeface-inter": "^3.15.0"
+    "react-popper": "^2.3.0",
+    "react-scrollspy": "3.4.3",
+    "sharp": "^0.30.6",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "3.1.3",
+    "typeface-inter": "3.18.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.1",
-    "@types/cypress-axe": "^0.8.0",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.0.0",
-    "@types/react-scrollspy": "^3.3.3",
-    "@types/styled-components": "^5.1.3",
-    "autoprefixer": "^10.0.1",
-    "axe-core": "^4.0.2",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.2.1",
-    "babel-preset-gatsby": "^0.5.11",
-    "chalk": "^4.1.0",
-    "contentful-import": "^7.9.11",
-    "cypress": "^5.3.0",
-    "cypress-axe": "^0.8.1",
+    "@testing-library/cypress": "7.0.1",
+    "@types/cypress-axe": "0.8.0",
+    "@types/react": "16.9.49",
+    "@types/react-dom": "16.9.8",
+    "@types/react-helmet": "6.0.0",
+    "@types/react-scrollspy": "3.3.3",
+    "@types/styled-components": "5.1.3",
+    "@types/tailwindcss": "^3.0.11",
+    "autoprefixer": "10.0.1",
+    "axe-core": "4.0.2",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.2.1",
+    "babel-preset-gatsby": "2.17.0",
+    "chalk": "4.1.0",
+    "contentful-import": "7.9.11",
     "eslint": "7.10.0",
     "eslint-config-airbnb": "18.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.0",
-    "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.3.0",
+    "eslint-plugin-react": "7.21.2",
     "eslint-plugin-react-hooks": "4.1.2",
-    "gatsby": "^2.24.66",
-    "gh-pages": "^3.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "inquirer": "^7.1.0",
-    "jest": "^26.2.1",
-    "postcss-cli": "^8.0.0",
-    "prettier": "^2.1.2",
-    "react-test-renderer": "^16.13.1",
-    "rimraf": "^3.0.2",
-    "start-server-and-test": "^1.11.4",
-    "twin.macro": "^1.10.0",
-    "typescript": "^4.0.3",
-    "yargs-parser": "^20.2.0"
+    "gh-pages": "3.0.0",
+    "identity-obj-proxy": "3.0.0",
+    "inquirer": "7.1.0",
+    "jest": "26.2.1",
+    "postcss": "^8.4.14",
+    "prettier": "2.7.1",
+    "react-test-renderer": "16.13.1",
+    "rimraf": "3.0.2",
+    "start-server-and-test": "1.11.4",
+    "twin.macro": "^2.8.2",
+    "typescript": "4.7.4",
+    "yargs-parser": "20.2.0"
   },
   "engines": {
     "node": ">=10.13.0"
@@ -88,7 +82,6 @@
     "contentful"
   ],
   "license": "MIT",
-  "main": "n/a",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/contentful-userland/gatsby-contentful-starter.git"
