--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@fontsource/inter": "^4.5.12",
     "@popperjs/core": "^2.11.5",
     "clsx": "^1.1.1",
     "gatsby": "^4.16.0",
@@ -35,8 +36,7 @@
     "react-scrollspy": "3.4.3",
     "sharp": "^0.30.6",
     "styled-components": "^5.3.5",
-    "tailwindcss": "3.1.3",
-    "typeface-inter": "3.18.1"
+    "tailwindcss": "3.1.3"
   },
   "devDependencies": {
     "@testing-library/cypress": "7.0.1",
