--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-contentful": "^7.21.1",
     "gatsby-transformer-sharp": "^4.23.1",
     "graphql": "^15.8.0",
+    "gsap": "^3.11.3",
     "lottie-web": "5.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
