--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-scrollspy": "3.4.3",
+    "resize-observer": "^1.0.4",
     "sharp": "^0.30.6",
     "tailwindcss": "3.1.8"
   },
