--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "gatsby-source-contentful": "^7.21.1",
     "gatsby-transformer-sharp": "^4.23.1",
     "graphql": "^15.8.0",
-    "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-scrollspy": "3.4.3",
     "resize-observer": "^1.0.4",
     "sharp": "^0.30.6",
-    "tailwindcss": "3.1.8"
+    "tailwindcss": "3.1.8",
+    "ts-easing": "^0.2.0"
   },
   "devDependencies": {
     "@testing-library/cypress": "7.0.1",
