--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.12.1",
     "@fontsource/inter": "^4.5.12",
+    "@nivo/core": "^0.80.0",
+    "@nivo/generators": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@popperjs/core": "^2.11.6",
     "clsx": "^1.2.1",
     "gatsby": "^4.23.1",
