--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "allowJs": true,
     "types": ["cypress"]
   },
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "public", ".cache"]
 }
