--- a/package.json
+++ b/package.json
@@ -7,65 +7,73 @@
     "url": "https://github.com/contentful-userland/gatsby-contentful-starter/issues"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@contentful/rich-text-react-renderer": "^15.16.2",
+    "@contentful/rich-text-types": "^16.0.2",
     "@fontsource/inter": "^4.5.12",
     "@nivo/core": "^0.80.0",
     "@nivo/generators": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "@nivo/tooltip": "^0.80.0",
     "@popperjs/core": "^2.11.6",
     "clsx": "^1.2.1",
-    "gatsby": "^4.23.1",
+    "gatsby": "^5.2.0",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-manifest": "^4.23.1",
-    "gatsby-plugin-netlify": "^5.0.1",
-    "gatsby-plugin-offline": "^5.23.1",
-    "gatsby-plugin-postcss": "^5.23.0",
-    "gatsby-plugin-robots-txt": "^1.7.1",
-    "gatsby-plugin-sharp": "^4.23.1",
-    "gatsby-plugin-sitemap": "^5.23.1",
+    "gatsby-plugin-image": "^3.2.0",
+    "gatsby-plugin-manifest": "^5.2.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-offline": "^6.2.0",
+    "gatsby-plugin-postcss": "^6.2.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.2.0",
+    "gatsby-plugin-sitemap": "^6.2.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-typescript": "^4.23.0",
-    "gatsby-source-contentful": "^7.21.1",
-    "gatsby-transformer-sharp": "^4.23.1",
-    "graphql": "^15.8.0",
+    "gatsby-plugin-typescript": "^5.2.0",
+    "gatsby-source-contentful": "^8.2.0",
+    "gatsby-transformer-sharp": "^5.2.0",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-scrollspy": "3.4.3",
     "resize-observer": "^1.0.4",
-    "sharp": "^0.30.6",
+    "sharp": "^0.30.7",
     "tailwindcss": "3.2.4",
     "ts-easing": "^0.2.0"
   },
   "devDependencies": {
-    "@testing-library/cypress": "7.0.1",
-    "@types/cypress-axe": "0.8.0",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@babel/core": "^7.20.5",
+    "@babel/eslint-parser": "^7.19.1",
+    "@testing-library/cypress": "8.0.7",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "@types/react-scrollspy": "3.3.3",
-    "autoprefixer": "10.4.12",
-    "axe-core": "4.0.2",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "26.2.1",
-    "babel-preset-gatsby": "2.23.0",
-    "chalk": "4.1.0",
-    "contentful-import": "8.3.8",
-    "eslint": "8.24.0",
+    "autoprefixer": "10.4.13",
+    "axe-core": "4.5.2",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "29.3.1",
+    "babel-preset-gatsby": "3.2.0",
+    "chalk": "5.2.0",
+    "contentful-import": "8.5.15",
+    "core-js": "^3.26.1",
+    "cypress": "^11.2.0",
+    "eslint": "8.29.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "identity-obj-proxy": "3.0.0",
-    "inquirer": "7.1.0",
-    "jest": "26.2.1",
-    "postcss": "^8.4.16",
-    "prettier": "2.7.1",
+    "inquirer": "9.1.4",
+    "jest": "29.3.1",
+    "postcss": "^8.4.20",
+    "prettier": "2.8.1",
+    "prop-types": "^15.8.1",
     "react-test-renderer": "18.2.0",
     "rimraf": "3.0.2",
-    "start-server-and-test": "1.14.0",
-    "typescript": "4.8.3",
-    "yargs-parser": "20.2.0"
+    "start-server-and-test": "1.15.2",
+    "typescript": "4.9.4",
+    "webpack": "5.75.0",
+    "yargs-parser": "21.1.1"
   },
   "engines": {
     "node": ">=18.9.1"
@@ -87,12 +95,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
     "build": "gatsby build",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix *.js bin/*.js",
-    "postinstall": "node ./bin/hello.js",
-    "setup": "node ./bin/setup.js",
+    "postinstall": "node ./bin/hello.mjs",
+    "setup": "node ./bin/setup.mjs",
     "start": "npm run develop",
     "heroku-postbuild": "gatsby build",
-    "cleanup-repository": "yarn remove contentful-import chalk inquirer && node ./bin/cleanup.js && rimraf bin contentful",
+    "cleanup-repository": "npm remove contentful-import chalk inquirer && node ./bin/cleanup.mjs && rimraf bin contentful",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
